# testnet-vapps

./: CONTRIBUTING.md  DwiArsa  GAMESHASH_PROPOSAL.md  Garz26.md  README.md  TEMPLATE.md  Vapps crypto  asepsaepudin-dot.md.  fair Verifiable Matchmaking.md  package-lock.json  submissionsdefifudoli0909.md.txt
ideas/: daisy.md  my_first_vapp.md  proof_tracker.md  vapp_insight.md
onenov-votig/: onenov-vapp.md  vapp.html
scripts/: validate.js
scripts/cli-usage-tracker/: scli  tracker.js
submission/gaming/: seikolamda.md
submissions/: DonCharismax.md  anaportrait.md  panjul594.md  proof-explorer.md  rifki654  rikson.md  voting_dapp.md
submissions/defi/: .gitkeep  0xfahmi  0xrama.md  Agan90.md  Apalugobang.md  AzazelGanz  Bimobudimantoro.md  CYcitizen.md  Cunong51.md  DecentraPay.md  FeriyantoA.md  JaDaOfficial17.md  JonesArmstrong.md  Karthi1311.md  Mahmoud514.md  Mankgrx69.md  Micro-Payments with Sound Tokens.md  Pay-Per-Sound Micropayments.md  RIKSON93.md  Rifki654.md  Samirmaggie.md  Thuyaaung00.md  Whyim01.md  achmadsu.md  add-defi-micropayments  airdropsemngat.md  anuj123r.md  badek212.md  basirhai.md  dakochan212.md  fansems1.md  heruanam20.md  hieut3k34.md  highwill.md  hosganini.md  humsingdefidev.md  hyperenda.md  juy.md  kavalangsepai  legi0321.md  (+14 more)
submissions/gaming/: 0xCreattor.md  0xZepeto.md  0xbyt4.md  0xdkcvd.md  0xethll.md  0xhours.md  0xsanza.md  1momoh.md  AaBatok.md  Akagami.md  Akbarbounty.md  Alfonova-Node.md  Azeezatou.md  Dapsky.md  Ddm1234  Emmang96.md  Glamourxyz.md  HoangDungNg.md  Jhoni1098.md  KaelVNode.md  KayXCrypto.md  QuestChain.md  SAMIR7U.md  SAMIR7U_v2.md  SlavaKudravcev.md  SudokuProof-Prototype.html  TEMPLATE.md  ZKarena_Quest  aamon3572.md  abaynath.md  achankun.md  (+51 more)
vapp-ideas/: soundvote.md
zkhealth-verifier/: Cargo.toml  README.md
zkhealth-verifier/examples/: vaccine_proof.rs
zkhealth-verifier/src/: lib.rs
zkhealth-verifier/src/api/: mod.rs  verification.rs
zkhealth-verifier/src/circuits/: health_verifier.rs  mod.rs
zkhealth-verifier/src/types/: health_record.rs  mod.rs
zkhealth-verifier/tests/: integration_tests.rs
zkpoker/: .gitignore  Cargo.toml  README.md  temp_card_fix.rs
zkpoker/examples/: poker_game.rs  tournament.rs
zkpoker/src/: lib.rs
zkpoker/src/api/: mod.rs  poker_service.rs
zkpoker/src/crypto/: commitments.rs  mod.rs  proofs.rs  zk_circuits.rs
zkpoker/src/game/: betting.rs  mod.rs  poker.rs  tournament.rs
zkpoker/src/types/: betting.rs  card.rs  game_state.rs  hand.rs  mod.rs  player.rs
(+175 files in other folders)
