# zkhealth-verifier/Cargo.toml
[package]
name = "zkhealth-verifier"
version = "0.1.0"
edition = "2021"
authors = ["Discord: sabnzbd"]
description = "Privacy-preserving healthcare verification using zero-knowledge proofs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SoundnessLabs/testnet-vapps"
keywords = ["blockchain", "zero-knowledge", "healthcare", "privacy"]
categories = ["cryptography", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"

# Note: These are placeholder dependencies
# Replace with actual Soundness Layer SDK when available
# soundness-sdk = "0.1.0"
# soundness-circuits = "0.1.0"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "vaccine_proof"
path = "examples/vaccine_proof.rs"
