[package]
name = "zkpoker"
version = "0.1.0"
edition = "2021"
authors = ["catnodes"]
description = "Verifiable poker platform using zero-knowledge proofs on Soundness Layer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SoundnessLabs/testnet-vapps"
keywords = ["blockchain", "zero-knowledge", "poker", "gaming", "soundness"]
categories = ["cryptography", "games", "api-bindings"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "macros"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
hex = "0.4"
ring = "0.17"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Game-specific
itertools = "0.12"
strum = { version = "0.25", features = ["derive"] }

# Note: Replace with actual Soundness Layer SDK when available
# soundness-sdk = "0.1.0"
# soundness-zk = "0.1.0"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"

[[example]]
name = "poker_game"
path = "examples/poker_game.rs"

[[example]]
name = "tournament"
path = "examples/tournament.rs"

[workspace]
